--- a/hello-world.html
+++ b/hello-world.html
@@ -2,10 +2,13 @@
 <html lang="en-us">
 <head>
 <meta charset="utf-8">
-<title>Hello...</title>
+<title>based on real text</title>
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"/>
 <style type="text/css">
-
+.preinput {}
+.log {color:#777;background-color:#ddd; width:350px; height:300px;display: table-cell;
+   vertical-align: bottom;}
+.log p:last-child {margin-top:0px;margin-bottom: 0px; background-color:#eee;}
 </style>
 
 </head>
@@ -13,10 +16,12 @@
 <body>
 <div class="container">
     <div class="log">
-        
+        I've spent too much time on this bus, i got to get my pieces together and do something with them. The bus isn't going anywhere by the way.
     </div>
+    <br>
     <div class="input">
         <span class="preinput"></span>
+        <br>
         <input id="input"/>
     </div>
     <div class="choices">
@@ -25,8 +30,8 @@
     
 </div>
 </script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
-<script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
