--- a/hello-world.html
+++ b/hello-world.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>based on real text</title>
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"/>
 <style type="text/css">
 .preinput {}
 .log {color:#777;background-color:#ddd; width:350px; height:300px;display: table-cell;
