--- a/canvtxt.html
+++ b/canvtxt.html
@@ -45,7 +45,7 @@ If for any reason you cannot insert your own code in other scripts or simply don
 <script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
 <script>!window.jQuery && document.write(unescape('%3Cscript src="scrollbar/js/minified/jquery-1.9.1.min.js"%3E%3C/script%3E'))</script>
 <script src="scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
-<script src="script.js"></script>
+<script src="canvtxt.js"></script>
 
 
 </script>
