--- a/canvtxt.html
+++ b/canvtxt.html
@@ -4,42 +4,65 @@
 <meta charset="utf-8">
 <title>based on real text</title>
 <link href="scrollbar/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
-
 
 </head>
 
-<body style="background-color:#666">
-<div id="main">
+<body>
+<div id="main" class="container">
 
-<div id="page">In order for the custom scrollbar to work correctly, your content block must be visible (i.e. should not have display:none) and its content should be fully loaded. Otherwise you must call plugin’s update method after the above conditions are met.
+    <div class="page row">
+        <div id="page" class="col-xs-12">
+            In order for the custom scrollbar to work correctly, your content block must be visible (i.e. should not have display:none) and its content should be fully loaded. Otherwise you must call plugin’s update method after the above conditions are met.
 
-Hidden content blocks (either by CSS display property or jQuery $.hide()) have zero dimensions, so calling mCustomScrollbar function on them will not work. Instead, you should call the function after your elements become fully visible, so the script calculates content length correctly and apply/update the scrollbar (see live example).
+            Hidden content blocks (either by CSS display property or jQuery $.hide()) have zero dimensions, so calling mCustomScrollbar function on them will not work. Instead, you should call the function after your elements become fully visible, so the script calculates content length correctly and apply/update the scrollbar (see live example).
 
-If you load your content dynamically (e.g. via ajax) you must also call mCustomScrollbar function (or its update method) after content is fully loaded (e.g. on ajax success). The same applies when you programmatically change the content of elements with custom scrollbars (see ajax demo).
+            If you load your content dynamically (e.g. via ajax) you must also call mCustomScrollbar function (or its update method) after content is fully loaded (e.g. on ajax success). The same applies when you programmatically change the content of elements with custom scrollbars (see ajax demo).
 
-If for any reason you cannot insert your own code in other scripts or simply don’t know where to put it, set plugin’s updateOnContentResize option parameter to true
-In order for the custom scrollbar to work correctly, your content block must be visible (i.e. should not have display:none) and its content should be fully loaded. Otherwise you must call plugin’s update method after the above conditions are met.
+            If for any reason you cannot insert your own code in other scripts or simply don’t know where to put it, set plugin’s updateOnContentResize option parameter to true
+            In order for the custom scrollbar to work correctly, your content block must be visible (i.e. should not have display:none) and its content should be fully loaded. Otherwise you must call plugin’s update method after the above conditions are met.
 
-Hidden content blocks (either by CSS display property or jQuery $.hide()) have zero dimensions, so calling mCustomScrollbar function on them will not work. Instead, you should call the function after your elements become fully visible, so the script calculates content length correctly and apply/update the scrollbar (see live example).
+            Hidden content blocks (either by CSS display property or jQuery $.hide()) have zero dimensions, so calling mCustomScrollbar function on them will not work. Instead, you should call the function after your elements become fully visible, so the script calculates content length correctly and apply/update the scrollbar (see live example).
 
-If you load your content dynamically (e.g. via ajax) you must also call mCustomScrollbar function (or its update method) after content is fully loaded (e.g. on ajax success). The same applies when you programmatically change the content of elements with custom scrollbars (see ajax demo).
+            If you load your content dynamically (e.g. via ajax) you must also call mCustomScrollbar function (or its update method) after content is fully loaded (e.g. on ajax success). The same applies when you programmatically change the content of elements with custom scrollbars (see ajax demo).
 
-If for any reason you cannot insert your own code in other scripts or simply don’t know where to put it, set plugin’s updateOnContentResize option parameter to true
-In order for the custom scrollbar to work correctly, your content block must be visible (i.e. should not have display:none) and its content should be fully loaded. Otherwise you must call plugin’s update method after the above conditions are met.
+            If for any reason you cannot insert your own code in other scripts or simply don’t know where to put it, set plugin’s updateOnContentResize option parameter to true
+            In order for the custom scrollbar to work correctly, your content block must be visible (i.e. should not have display:none) and its content should be fully loaded. Otherwise you must call plugin’s update method after the above conditions are met.
 
-Hidden content blocks (either by CSS display property or jQuery $.hide()) have zero dimensions, so calling mCustomScrollbar function on them will not work. Instead, you should call the function after your elements become fully visible, so the script calculates content length correctly and apply/update the scrollbar (see live example).
+            Hidden content blocks (either by CSS display property or jQuery $.hide()) have zero dimensions, so calling mCustomScrollbar function on them will not work. Instead, you should call the function after your elements become fully visible, so the script calculates content length correctly and apply/update the scrollbar (see live example).
 
-If you load your content dynamically (e.g. via ajax) you must also call mCustomScrollbar function (or its update method) after content is fully loaded (e.g. on ajax success). The same applies when you programmatically change the content of elements with custom scrollbars (see ajax demo).
+            If you load your content dynamically (e.g. via ajax) you must also call mCustomScrollbar function (or its update method) after content is fully loaded (e.g. on ajax success). The same applies when you programmatically change the content of elements with custom scrollbars (see ajax demo).
 
-If for any reason you cannot insert your own code in other scripts or simply don’t know where to put it, set plugin’s updateOnContentResize option parameter to true</div>
+            If for any reason you cannot insert your own code in other scripts or simply don’t know where to put it, set plugin’s updateOnContentResize option parameter to true
+            In order for the custom scrollbar to work correctly, your content block must be visible (i.e. should not have display:none) and its content should be fully loaded. Otherwise you must call plugin’s update method after the above conditions are met.
 
-<div id="menu" style="">
-    <div id="menuRow" style="">
-        <div id="verbs" style="width: 45%; display: table-cell;"></div>
-        <div id= "words" style="width: 45%; display: table-cell;"></div>
+            Hidden content blocks (either by CSS display property or jQuery $.hide()) have zero dimensions, so calling mCustomScrollbar function on them will not work. Instead, you should call the function after your elements become fully visible, so the script calculates content length correctly and apply/update the scrollbar (see live example).
+
+            If you load your content dynamically (e.g. via ajax) you must also call mCustomScrollbar function (or its update method) after content is fully loaded (e.g. on ajax success). The same applies when you programmatically change the content of elements with custom scrollbars (see ajax demo).
+
+            If for any reason you cannot insert your own code in other scripts or simply don’t know where to put it, set plugin’s updateOnContentResize option parameter to true
+            In order for the custom scrollbar to work correctly, your content block must be visible (i.e. should not have display:none) and its content should be fully loaded. Otherwise you must call plugin’s update method after the above conditions are met.
+
+            Hidden content blocks (either by CSS display property or jQuery $.hide()) have zero dimensions, so calling mCustomScrollbar function on them will not work. Instead, you should call the function after your elements become fully visible, so the script calculates content length correctly and apply/update the scrollbar (see live example).
+
+            If you load your content dynamically (e.g. via ajax) you must also call mCustomScrollbar function (or its update method) after content is fully loaded (e.g. on ajax success). The same applies when you programmatically change the content of elements with custom scrollbars (see ajax demo).
+
+            If for any reason you cannot insert your own code in other scripts or simply don’t know where to put it, set plugin’s updateOnContentResize option parameter to true
+            In order for the custom scrollbar to work correctly, your content block must be visible (i.e. should not have display:none) and its content should be fully loaded. Otherwise you must call plugin’s update method after the above conditions are met.
+
+            Hidden content blocks (either by CSS display property or jQuery $.hide()) have zero dimensions, so calling mCustomScrollbar function on them will not work. Instead, you should call the function after your elements become fully visible, so the script calculates content length correctly and apply/update the scrollbar (see live example).
+
+            If you load your content dynamically (e.g. via ajax) you must also call mCustomScrollbar function (or its update method) after content is fully loaded (e.g. on ajax success). The same applies when you programmatically change the content of elements with custom scrollbars (see ajax demo).
+
+            If for any reason you cannot insert your own code in other scripts or simply don’t know where to put it, set plugin’s updateOnContentResize option parameter to true
+        </div>
     </div>
-</div>
+
+    <div class="menu row noselect">
+        <div id="verbs" class="col-xs-6"></div>
+        <div id= "words" class="col-xs-6"></div>
+    </div>
 
 </div>
 <script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
