--- a/canvtxt.html
+++ b/canvtxt.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="utf-8">
 <title>based on real text</title>
-<link href="scrollbar/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -65,6 +64,7 @@
     </div>
 
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
 <script src="canvtxt.js"></script>
 
