--- a/parser.html
+++ b/parser.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
 <meta charset="utf-8">
-<title>based on real text</title>
+<title>parser</title>
 <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,16 +17,15 @@
     </div>
 
     <div class="menu row noselect">
-        <div id="verbs" class="col-xs-6"></div>
-        <div id= "words" class="col-xs-6"></div>
+        <div class="button" style="height:10%">PARSE</div>
+        <input type="text" style="width:100%; height:90%">
     </div>
 
 </div>
-<a href="parser.html">write story</a>
+<a href="canvtxt.html">game</a>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
 <script src="map.js"></script>
-<script src="canvtxt.js"></script>
 
 
 </script>
