--- a/canvtxt.html
+++ b/canvtxt.html
@@ -5,6 +5,7 @@
 <title>based on real text</title>
 <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="icon" type="image/png" href="logo2.png" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -12,7 +13,7 @@
 <div id="main" class="container">
 
     <div class="page row">
-        <div id="page" class="col-xs-12">
+        <div id="page">
         </div>
     </div>
 
@@ -26,7 +27,6 @@
 <script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
 <script src="map.js"></script>
 <script src="canvtxt.js"></script>
-
 
 </script>
 </body>
