--- a/botext.html
+++ b/botext.html
@@ -25,7 +25,7 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
-<script src="map.js"></script>
+<script src="example.js"></script>
 <script src="canvtxt.js"></script>
 
 </script>
