--- a/botext.html
+++ b/botext.html
@@ -5,7 +5,7 @@
 <title>based on real text</title>
 <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
-<link rel="icon" type="image/png" href="logo2.png" />
+<link rel="icon" type="image/png" href="favicon.png" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -26,7 +26,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
 <script src="example.js"></script>
-<script src="canvtxt.js"></script>
+<script src="engine.js"></script>
 
 </script>
 </body>
