--- a/botext.html
+++ b/botext.html
@@ -21,6 +21,7 @@
         <div id="verbs" class="col-xs-6"></div>
         <div id= "words" class="col-xs-6"></div>
     </div>
+    <div id="fsb" onclick="element.requestFullscreen()">full screen</div>
 
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
