--- a/botext.html
+++ b/botext.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="icon" type="image/png" href="favicon.png" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="mobile-web-app-capable" content="yes">
 </head>
 
 <body>
